--- a/src/styles/core/_typography.scss
+++ b/src/styles/core/_typography.scss
@@ -1,8 +1,8 @@
 .title-primary {
   font-weight: 500;
-  font-size: clamp(3.3rem, 6vw, 4.8rem);
+  font-size: clamp(3.3rem, 10vw, 4.8rem);
   line-height: 1.15;
-  color: var(--color-white);
+  min-height: 0vw;
 
   &-white {
     color: var(--color-white);
